@@ -14,6 +14,7 @@
 		4. after finding equivalent tract on reference re-check neighbour tracts; also leftmost_hopo_name_from_string()
 		could scan _all_ tracts and return closest to input
 		5. when translating to protein, use Miyata79 and Grantham74 a.a. distances doi:10.1126/science.185.4154.862 doi:10.1007/bf01732340
+		6. a context+tract may span two genes/gff3 features (so we should ask for start and final features)
 2020.08.25
 	* beta version working: 
 		1. imports BWA and gives for each tract a location in reference genome. (BWA creates indices from ref fasta)
